# atuin-server-sqlite

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
migrations/: 20230608124200_create_history.sql  20230608124201_create_users.sql  20230608124202_create_sessions.sql  20230623070418_records.sql  20231202170508_create-store.sql  20240108124837_drop-some-defaults.sql
src/: lib.rs  main.rs  wrappers.rs
