[package]
name = "atuin-server-sqlite-unofficial"
version = "15.0.1"
edition = "2021"
description = "unofficial server sqlite database library for atuin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atuin-common = { git = "https://github.com/ellie/atuin", version = "15.0.0" }
atuin-server = { git = "https://github.com/ellie/atuin", version = "15.0.0" }
atuin-server-database = { git = "https://github.com/ellie/atuin", version = "15.0.0" }

tracing = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tracing-tree = "0.2"

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "chrono", "sqlite"]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["registry", "env-filter"]
